--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
 	Voluntere Form
 </h1>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="POST">	
-
-
+<fieldset>
+	<legend>
+		My Info
+	</legend>
+	<label for= "first_name_field">First Name: </label>
+	<input type="text" id="first_name_field" name="first_name_field">
+<p>
+	<label for= "last_name_field">Last Name: </label>
+	<input type="text" id="last_name_field" name="last_name_field">	
+</p>
+<p>
+	<label for= "phone_field">Phone Number: </label>
+	<input type="text" id="phone_field" name="phone_field">		
+</p>
+<p>
+	<label for= "email_field">Email Address: </label>
+	<input type="text" id="email_field" name="email_field">
+</p>
 
 </form>
 </html>
