--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<title> Volunteer Form </title>
 </head>
+<body>
 <h1>
-	Voluntere Form
+	Volunteer Form
 </h1>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="POST">	
 <fieldset>
@@ -26,6 +27,26 @@
 	<label for= "email_field">Email Address: </label>
 	<input type="text" id="email_field" name="email_field">
 </p>
+<label>Gender:</label>
+<input type="radio" id="male" name="gender_field" value="male">
+<label for="male">Male</label>
+<input type="radio" id="female" name="gender_field" value="female">
+<label for="female">Female</label>
 
-</form>
+<p>
+	</p>
+	<label>Age</label>
+	<select id="age_field" name="age_field">
+		<option value="Under 18">Under 18</option>				
+		<option value="18 - 24">18-24</option>
+		<option value="25 - 34">25-34</option>
+		<option value="35 - 44">35-44</option>
+		<option value="45 - 54">45-54</option>
+		<option value="65 and over">65 and over</option>
+	</select>
+</fieldset>
+<fieldset>
+
+
+
 </html>
