--- a/index.html
+++ b/index.html
@@ -46,7 +46,39 @@
 	</select>
 </fieldset>
 <fieldset>
+<legend>
+	My Avilability
+</legend>
+<label> Days Available:</label>
+<p>
+</p>
 
+<input type="checkbox" name="available_field[]" value="Sunday">
+<label>Sunday</label>
+<p>
+<input type="checkbox" name="available_field[]" value="Monday">
+<label>Monday</label>
+</p>
+<p>
+<input type="checkbox" name="available_field[]" value="Tuesday">
+<label>Tuesday</label>
+</p>
+<p>
+<input type="checkbox" name="available_field[]" value="Wednesday">
+<label>Wednesday</label>
+</p>
+<p>
+<input type="checkbox" name="available_field[]" value="Thursday">
+<label>Thursday</label>
+</p>
+<p>
+<input type="checkbox" name="available_field[]" value="Friday">
+<label>Friday</label>
+</p>
+<p>
+<input type="checkbox" name="available_field[]" value="Saturday">
+<label>Saturday</label>
+</p>
 
 
 </html>
