added text box and hidden field name with email username

--- a/index.html
+++ b/index.html
@@ -80,5 +80,15 @@
 <label>Saturday</label>
 </p>
 
-
+<label>Any Comments?</label>
+<p>
+<textarea rows="9" cols="50" name="comments_field"></textarea>
+</p>
+<input type="hidden" name="hidden_field" value="jalaniz1">
+</fieldset>
+<p>
+	<input type="submit" value="Send Me">
+</p>
+</form>
+</body>
 </html>
